<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <Button
                        android:id="@+id/button_startCountdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="70dp"
                        android:background="?attr/colorAccent"
                        android:onClick="button_startCountdonwn_Clicked"
                        android:text="@string/text_button_startCountdown"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="525dp" />

                    <TimePicker
                        android:id="@+id/spinnerClock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:timePickerMode="spinner"
                        android:translationY="50dp"/>


                    <TextView
                        android:id="@+id/tv_text_remainingSec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="300dp"
                        android:text="@string/text_remainingSeconds"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:translationY="100dp" />

                    <TextView
                        android:id="@+id/tv_remainingSeconds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="320dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        android:translationY="120dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/button_cancel_countdown"
                        android:layout_width="69dp"
                        android:layout_height="74dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="50dp"
                        android:clickable="true"
                        android:focusable="auto"
                        android:onClick="button_cancel_countdownClicked"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        app:maxImageSize="60dp"
                        app:srcCompat="@drawable/baseline_cancel_countdown" />

                </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/tab3_inner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/button_start_stop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:height="70dp"
                            android:background="?attr/colorAccent"
                            android:onClick="button_start_stop_Clicked"
                            android:text="@string/text_button_start"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:translationY="525dp" />

                        <Chronometer
                            android:id="@+id/chron"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="50sp"
                            android:translationY="140dp" />

                        <TextView
                            android:id="@+id/tv_delta_t"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_delta_t"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="30sp"
                            android:translationY="400dp" />

                        <ProgressBar
                            android:id="@+id/progressBar_chrono"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:indeterminate="false"
                            android:scaleX="20"
                            android:scaleY="20"
                            android:translationY="165dp"
                            android:progressDrawable="@drawable/progress_circle_chrono" />

                        <ProgressBar
                            android:id="@+id/progressBar_decorator"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:indeterminate="false"
                            android:scaleX="25"
                            android:scaleY="25"
                            android:translationY="165dp"
                            android:progressDrawable="@drawable/progress_circle_chrono" />

                        <ProgressBar
                            android:id="@+id/progressBar_outer"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:indeterminate="false"
                            android:scaleX="30"
                            android:scaleY="30"
                            android:translationY="165dp"
                            android:progressDrawable="@drawable/progress_circle_chrono" />

                    </RelativeLayout>
                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TimePicker
                        android:id="@+id/tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="1.4"
                        android:scaleY="1.4"
                        android:translationY="90dp" />

                    <Button
                        android:id="@+id/button_setAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="70dp"
                        android:background="?attr/colorAccent"
                        android:onClick="button_setAlarm_Clicked"
                        android:text="@string/text_button_setAlarm"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="525dp" />


                    <TextClock
                        android:id="@+id/tec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:translationX="600dp"/>



                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>